syntax = "proto3";

option java_multiple_files = true;
option java_package = "demo.gp.user.grpc";

package demo.gp.user;

import "demo/gp/user/enums.proto";
import "demo/gp/user/objects.proto";
import "demo/gp/user/interfaces.proto";
import "demo/gp/user/input_objects.proto";
import "io/graphoenix/core/enums.proto";
import "io/graphoenix/core/input_objects.proto";

message QueryUserRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression id = 3;
    io.graphoenix.core.StringExpression name = 4;
    io.graphoenix.core.StringExpression email = 5;
    io.graphoenix.core.StringExpression phone_numbers = 6;
    UserTypeExpression user_type = 7;
    bool include_deprecated = 8;
    io.graphoenix.core.IntExpression version = 9;
    io.graphoenix.core.IntExpression realm_id = 10;
    io.graphoenix.core.StringExpression create_user_id = 11;
    io.graphoenix.core.StringExpression create_time = 12;
    io.graphoenix.core.StringExpression update_user_id = 13;
    io.graphoenix.core.StringExpression update_time = 14;
    io.graphoenix.core.StringExpression create_group_id = 15;
    io.graphoenix.core.StringExpression intro_typename = 16;
    UserPhoneNumbersRelationExpression user_phone_numbers_relation = 17;
    repeated string group_by = 18;
    bool not = 19;
    io.graphoenix.core.Conditional cond = 20;
    repeated UserExpression exs = 21;
}
message QueryUserListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression id = 3;
    io.graphoenix.core.StringExpression name = 4;
    io.graphoenix.core.StringExpression email = 5;
    io.graphoenix.core.StringExpression phone_numbers = 6;
    UserTypeExpression user_type = 7;
    bool include_deprecated = 8;
    io.graphoenix.core.IntExpression version = 9;
    io.graphoenix.core.IntExpression realm_id = 10;
    io.graphoenix.core.StringExpression create_user_id = 11;
    io.graphoenix.core.StringExpression create_time = 12;
    io.graphoenix.core.StringExpression update_user_id = 13;
    io.graphoenix.core.StringExpression update_time = 14;
    io.graphoenix.core.StringExpression create_group_id = 15;
    io.graphoenix.core.StringExpression intro_typename = 16;
    UserPhoneNumbersRelationExpression user_phone_numbers_relation = 17;
    UserOrderBy order_by = 18;
    repeated string group_by = 19;
    bool not = 20;
    io.graphoenix.core.Conditional cond = 21;
    repeated UserExpression exs = 22;
    int32 first = 23;
    int32 last = 24;
    int32 offset = 25;
    string after = 26;
    string before = 27;
}
message QueryUserConnectionRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression id = 3;
    io.graphoenix.core.StringExpression name = 4;
    io.graphoenix.core.StringExpression email = 5;
    io.graphoenix.core.StringExpression phone_numbers = 6;
    UserTypeExpression user_type = 7;
    bool include_deprecated = 8;
    io.graphoenix.core.IntExpression version = 9;
    io.graphoenix.core.IntExpression realm_id = 10;
    io.graphoenix.core.StringExpression create_user_id = 11;
    io.graphoenix.core.StringExpression create_time = 12;
    io.graphoenix.core.StringExpression update_user_id = 13;
    io.graphoenix.core.StringExpression update_time = 14;
    io.graphoenix.core.StringExpression create_group_id = 15;
    io.graphoenix.core.StringExpression intro_typename = 16;
    UserPhoneNumbersRelationExpression user_phone_numbers_relation = 17;
    UserOrderBy order_by = 18;
    repeated string group_by = 19;
    bool not = 20;
    io.graphoenix.core.Conditional cond = 21;
    repeated UserExpression exs = 22;
    int32 first = 23;
    int32 last = 24;
    int32 offset = 25;
    string after = 26;
    string before = 27;
}
message QueryUserPhoneNumbersRelationRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression id = 3;
    io.graphoenix.core.StringExpression user_ref = 4;
    UserExpression user = 5;
    io.graphoenix.core.StringExpression phone_numbers_ref = 6;
    bool include_deprecated = 7;
    io.graphoenix.core.IntExpression version = 8;
    io.graphoenix.core.IntExpression realm_id = 9;
    io.graphoenix.core.StringExpression create_user_id = 10;
    io.graphoenix.core.StringExpression create_time = 11;
    io.graphoenix.core.StringExpression update_user_id = 12;
    io.graphoenix.core.StringExpression update_time = 13;
    io.graphoenix.core.StringExpression create_group_id = 14;
    io.graphoenix.core.StringExpression intro_typename = 15;
    repeated string group_by = 16;
    bool not = 17;
    io.graphoenix.core.Conditional cond = 18;
    repeated UserPhoneNumbersRelationExpression exs = 19;
}
message QueryUserPhoneNumbersRelationListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression id = 3;
    io.graphoenix.core.StringExpression user_ref = 4;
    UserExpression user = 5;
    io.graphoenix.core.StringExpression phone_numbers_ref = 6;
    bool include_deprecated = 7;
    io.graphoenix.core.IntExpression version = 8;
    io.graphoenix.core.IntExpression realm_id = 9;
    io.graphoenix.core.StringExpression create_user_id = 10;
    io.graphoenix.core.StringExpression create_time = 11;
    io.graphoenix.core.StringExpression update_user_id = 12;
    io.graphoenix.core.StringExpression update_time = 13;
    io.graphoenix.core.StringExpression create_group_id = 14;
    io.graphoenix.core.StringExpression intro_typename = 15;
    UserPhoneNumbersRelationOrderBy order_by = 16;
    repeated string group_by = 17;
    bool not = 18;
    io.graphoenix.core.Conditional cond = 19;
    repeated UserPhoneNumbersRelationExpression exs = 20;
    int32 first = 21;
    int32 last = 22;
    int32 offset = 23;
    string after = 24;
    string before = 25;
}
message QueryUserPhoneNumbersRelationConnectionRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    io.graphoenix.core.StringExpression id = 3;
    io.graphoenix.core.StringExpression user_ref = 4;
    UserExpression user = 5;
    io.graphoenix.core.StringExpression phone_numbers_ref = 6;
    bool include_deprecated = 7;
    io.graphoenix.core.IntExpression version = 8;
    io.graphoenix.core.IntExpression realm_id = 9;
    io.graphoenix.core.StringExpression create_user_id = 10;
    io.graphoenix.core.StringExpression create_time = 11;
    io.graphoenix.core.StringExpression update_user_id = 12;
    io.graphoenix.core.StringExpression update_time = 13;
    io.graphoenix.core.StringExpression create_group_id = 14;
    io.graphoenix.core.StringExpression intro_typename = 15;
    UserPhoneNumbersRelationOrderBy order_by = 16;
    repeated string group_by = 17;
    bool not = 18;
    io.graphoenix.core.Conditional cond = 19;
    repeated UserPhoneNumbersRelationExpression exs = 20;
    int32 first = 21;
    int32 last = 22;
    int32 offset = 23;
    string after = 24;
    string before = 25;
}